Add menu option start new game

--- a/ui/mainwindow.ui
+++ b/ui/mainwindow.ui
@@ -36,6 +36,7 @@
     <property name="title">
      <string>&amp;File</string>
     </property>
+    <addaction name="actionNewGame"/>
     <addaction name="actionExit"/>
    </widget>
    <widget class="QMenu" name="menuHelp">
